@@ -38,9 +38,12 @@ import tools.jackson.databind.node.ObjectNode;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -48,6 +51,9 @@ import java.util.stream.Collectors;
  */
 @Service
 public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> implements DeviceService {
+
+    private static final int GATEWAY_NODE_TYPE = 2;
+    private static final int SUB_DEVICE_NODE_TYPE = 3;
 
     private final ProductService productService;
     private final DevicePropertyMapper devicePropertyMapper;
@@ -139,9 +145,9 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     @Transactional(rollbackFor = Exception.class)
     public DeviceDetailVO updateDevice(Long id, DeviceAddDTO dto) {
         Device device = getRequiredById(id);
-        Product product = productService.getRequiredByProductKey(dto.getProductKey());
+        Product product = productService.getRequiredByProductKey(normalizeRequiredText(dto.getProductKey()));
         ensureProductEnabledForDeviceArchive(product);
-        ensureDeviceCodeUnique(dto.getDeviceCode(), id);
+        ensureDeviceCodeUnique(normalizeRequiredText(dto.getDeviceCode()), id);
         applyEditableFields(device, dto, product, false);
         updateById(device);
         return getDetailById(id);
@@ -185,7 +191,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     @Transactional(rollbackFor = Exception.class)
     public DeviceReplaceResultVO replaceDevice(Long id, DeviceReplaceDTO dto) {
         Device sourceDevice = getRequiredById(id);
-        if (sourceDevice.getDeviceCode().equals(dto.getDeviceCode())) {
+        if (sourceDevice.getDeviceCode().equals(normalizeRequiredText(dto.getDeviceCode()))) {
             throw new BizException("新设备编码不能与原设备编码相同");
         }
 
@@ -253,15 +259,18 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     }
 
     @Override
-    public List<DeviceOptionVO> listDeviceOptions() {
-        return lambdaQuery()
+    public List<DeviceOptionVO> listDeviceOptions(boolean includeDisabled) {
+        LambdaQueryWrapper<Device> wrapper = new LambdaQueryWrapper<Device>()
                 .eq(Device::getDeleted, 0)
-                .eq(Device::getDeviceStatus, DeviceStatusEnum.ENABLED.getCode())
-                .orderByDesc(Device::getCreateTime)
-                .list()
-                .stream()
-                .map(this::toDeviceOption)
-                .collect(Collectors.toList());
+                .orderByDesc(Device::getCreateTime);
+        if (!includeDisabled) {
+            wrapper.eq(Device::getDeviceStatus, DeviceStatusEnum.ENABLED.getCode());
+        }
+        List<Device> devices = list(wrapper);
+        Map<Long, Product> productMap = loadProductMap(devices.stream().map(Device::getProductId).toList());
+        return devices.stream()
+                .map(device -> toDeviceOption(device, productMap.get(device.getProductId())))
+                .toList();
     }
 
     @Override
@@ -308,9 +317,9 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     }
 
     private Device createDeviceRecord(DeviceAddDTO dto) {
-        Product product = productService.getRequiredByProductKey(dto.getProductKey());
+        Product product = productService.getRequiredByProductKey(normalizeRequiredText(dto.getProductKey()));
         ensureProductEnabledForDeviceArchive(product);
-        ensureDeviceCodeUnique(dto.getDeviceCode(), null);
+        ensureDeviceCodeUnique(normalizeRequiredText(dto.getDeviceCode()), null);
 
         Device device = new Device();
         // 创建设备时统一从产品继承协议、节点类型，并落初始化状态字段。
@@ -342,20 +351,24 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         if (item == null) {
             throw new BizException("第 " + rowNo + " 行为空");
         }
-        if (!StringUtils.hasText(item.getProductKey())) {
+        if (!StringUtils.hasText(normalizeOptionalText(item.getProductKey()))) {
             throw new BizException("第 " + rowNo + " 行缺少产品 Key");
         }
-        if (!StringUtils.hasText(item.getDeviceName())) {
+        if (!StringUtils.hasText(normalizeOptionalText(item.getDeviceName()))) {
             throw new BizException("第 " + rowNo + " 行缺少设备名称");
         }
-        if (!StringUtils.hasText(item.getDeviceCode())) {
+        if (!StringUtils.hasText(normalizeOptionalText(item.getDeviceCode()))) {
             throw new BizException("第 " + rowNo + " 行缺少设备编码");
+        }
+        if (item.getParentDeviceId() != null && StringUtils.hasText(normalizeOptionalText(item.getParentDeviceCode()))) {
+            throw new BizException("第 " + rowNo + " 行父设备主键和父设备编码不能同时填写");
         }
     }
 
     private Product resolveReplacementProduct(Device sourceDevice, String productKey) {
-        if (StringUtils.hasText(productKey)) {
-            return productService.getRequiredByProductKey(productKey.trim());
+        String normalizedProductKey = normalizeOptionalText(productKey);
+        if (normalizedProductKey != null) {
+            return productService.getRequiredByProductKey(normalizedProductKey);
         }
         Product product = productService.getById(sourceDevice.getProductId());
         if (product == null || product.getDeleted() != null && product.getDeleted() == 1) {
@@ -370,8 +383,10 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
                                                    LocalDateTime replacementTime) {
         DeviceAddDTO replacement = new DeviceAddDTO();
         replacement.setProductKey(product.getProductKey());
-        replacement.setDeviceName(dto.getDeviceName().trim());
-        replacement.setDeviceCode(dto.getDeviceCode().trim());
+        replacement.setDeviceName(normalizeRequiredText(dto.getDeviceName()));
+        replacement.setDeviceCode(normalizeRequiredText(dto.getDeviceCode()));
+        replacement.setParentDeviceId(dto.getParentDeviceId());
+        replacement.setParentDeviceCode(normalizeOptionalText(dto.getParentDeviceCode()));
         replacement.setDeviceSecret(resolveReplacementText(dto.getDeviceSecret(), sourceDevice.getDeviceSecret()));
         replacement.setClientId(resolveReplacementText(dto.getClientId(), sourceDevice.getClientId()));
         replacement.setUsername(resolveReplacementText(dto.getUsername(), sourceDevice.getUsername()));
@@ -381,8 +396,9 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         replacement.setFirmwareVersion(resolveReplacementText(dto.getFirmwareVersion(), sourceDevice.getFirmwareVersion()));
         replacement.setIpAddress(resolveReplacementText(dto.getIpAddress(), sourceDevice.getIpAddress()));
         replacement.setAddress(resolveReplacementText(dto.getAddress(), sourceDevice.getAddress()));
+        String metadataJson = normalizeOptionalText(dto.getMetadataJson());
         replacement.setMetadataJson(buildTargetReplacementMetadata(
-                StringUtils.hasText(dto.getMetadataJson()) ? dto.getMetadataJson().trim() : sourceDevice.getMetadataJson(),
+                metadataJson != null ? metadataJson : sourceDevice.getMetadataJson(),
                 sourceDevice,
                 replacementTime
         ));
@@ -390,7 +406,8 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     }
 
     private String resolveReplacementText(String candidate, String fallback) {
-        return StringUtils.hasText(candidate) ? candidate.trim() : fallback;
+        String normalized = normalizeOptionalText(candidate);
+        return normalized != null ? normalized : fallback;
     }
 
     private String buildTargetReplacementMetadata(String baseMetadataJson,
@@ -454,19 +471,22 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     }
 
     private void applyEditableFields(Device device, DeviceAddDTO dto, Product product, boolean initializeDefaults) {
+        Device parentDevice = resolveParentDevice(dto, device.getId());
         device.setProductId(product.getId());
-        device.setDeviceName(dto.getDeviceName());
-        device.setDeviceCode(dto.getDeviceCode());
-        device.setDeviceSecret(dto.getDeviceSecret());
-        device.setClientId(dto.getClientId());
-        device.setUsername(dto.getUsername());
-        device.setPassword(dto.getPassword());
+        device.setGatewayId(resolveGatewayId(product.getNodeType(), parentDevice));
+        device.setParentDeviceId(parentDevice != null ? parentDevice.getId() : null);
+        device.setDeviceName(normalizeRequiredText(dto.getDeviceName()));
+        device.setDeviceCode(normalizeRequiredText(dto.getDeviceCode()));
+        device.setDeviceSecret(normalizeOptionalText(dto.getDeviceSecret()));
+        device.setClientId(normalizeOptionalText(dto.getClientId()));
+        device.setUsername(normalizeOptionalText(dto.getUsername()));
+        device.setPassword(normalizeOptionalText(dto.getPassword()));
         device.setProtocolCode(product.getProtocolCode());
         device.setNodeType(product.getNodeType());
-        device.setFirmwareVersion(dto.getFirmwareVersion());
-        device.setIpAddress(dto.getIpAddress());
-        device.setAddress(dto.getAddress());
-        device.setMetadataJson(dto.getMetadataJson());
+        device.setFirmwareVersion(normalizeOptionalText(dto.getFirmwareVersion()));
+        device.setIpAddress(normalizeOptionalText(dto.getIpAddress()));
+        device.setAddress(normalizeOptionalText(dto.getAddress()));
+        device.setMetadataJson(normalizeOptionalText(dto.getMetadataJson()));
 
         if (initializeDefaults) {
             device.setOnlineStatus(0);
@@ -547,16 +567,20 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
             return List.of();
         }
         Map<Long, Product> productMap = loadProductMap(devices.stream().map(Device::getProductId).toList());
+        Map<Long, Device> relationDeviceMap = loadRelationDeviceMap(devices);
         return devices.stream()
-                .map(device -> toPageVO(device, productMap.get(device.getProductId())))
+                .map(device -> toPageVO(device, productMap.get(device.getProductId()), relationDeviceMap))
                 .toList();
     }
 
     private DeviceDetailVO toDetailVO(Device device) {
         Product product = productService.getById(device.getProductId());
+        Map<Long, Device> relationDeviceMap = loadDeviceMap(java.util.Arrays.asList(device.getGatewayId(), device.getParentDeviceId()));
         DeviceDetailVO detail = new DeviceDetailVO();
         detail.setId(device.getId());
         detail.setProductId(device.getProductId());
+        detail.setGatewayId(device.getGatewayId());
+        detail.setParentDeviceId(device.getParentDeviceId());
         detail.setProductKey(product != null ? product.getProductKey() : null);
         detail.setProductName(product != null ? product.getProductName() : null);
         detail.setDeviceName(device.getDeviceName());
@@ -579,13 +603,16 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         detail.setLastReportTime(device.getLastReportTime());
         detail.setCreateTime(device.getCreateTime());
         detail.setUpdateTime(device.getUpdateTime());
+        applyRelationFields(detail, relationDeviceMap);
         return detail;
     }
 
-    private DevicePageVO toPageVO(Device device, Product product) {
+    private DevicePageVO toPageVO(Device device, Product product, Map<Long, Device> relationDeviceMap) {
         DevicePageVO row = new DevicePageVO();
         row.setId(device.getId());
         row.setProductId(device.getProductId());
+        row.setGatewayId(device.getGatewayId());
+        row.setParentDeviceId(device.getParentDeviceId());
         row.setProductKey(product != null ? product.getProductKey() : null);
         row.setProductName(product != null ? product.getProductName() : null);
         row.setDeviceName(device.getDeviceName());
@@ -603,25 +630,152 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         row.setLastReportTime(device.getLastReportTime());
         row.setCreateTime(device.getCreateTime());
         row.setUpdateTime(device.getUpdateTime());
+        applyRelationFields(row, relationDeviceMap);
         return row;
     }
 
     private Map<Long, Product> loadProductMap(List<Long> productIds) {
-        if (CollectionUtils.isEmpty(productIds)) {
+        List<Long> filteredIds = productIds.stream()
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+        if (CollectionUtils.isEmpty(filteredIds)) {
             return Map.of();
         }
-        return productService.listByIds(productIds)
+        return productService.listByIds(filteredIds)
                 .stream()
                 .collect(Collectors.toMap(Product::getId, product -> product, (left, right) -> left));
     }
 
-    private DeviceOptionVO toDeviceOption(Device device) {
+    private Map<Long, Device> loadRelationDeviceMap(List<Device> devices) {
+        return loadDeviceMap(devices.stream()
+                .flatMap(device -> java.util.stream.Stream.of(device.getGatewayId(), device.getParentDeviceId()))
+                .toList());
+    }
+
+    private Map<Long, Device> loadDeviceMap(List<Long> deviceIds) {
+        List<Long> filteredIds = deviceIds.stream()
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+        if (CollectionUtils.isEmpty(filteredIds)) {
+            return Map.of();
+        }
+        return lambdaQuery()
+                .in(Device::getId, filteredIds)
+                .eq(Device::getDeleted, 0)
+                .list()
+                .stream()
+                .collect(Collectors.toMap(Device::getId, device -> device, (left, right) -> left));
+    }
+
+    private void applyRelationFields(DeviceDetailVO detail, Map<Long, Device> relationDeviceMap) {
+        Device gatewayDevice = relationDeviceMap.get(detail.getGatewayId());
+        Device parentDevice = relationDeviceMap.get(detail.getParentDeviceId());
+        detail.setGatewayDeviceCode(gatewayDevice != null ? gatewayDevice.getDeviceCode() : null);
+        detail.setGatewayDeviceName(gatewayDevice != null ? gatewayDevice.getDeviceName() : null);
+        detail.setParentDeviceCode(parentDevice != null ? parentDevice.getDeviceCode() : null);
+        detail.setParentDeviceName(parentDevice != null ? parentDevice.getDeviceName() : null);
+    }
+
+    private void applyRelationFields(DevicePageVO row, Map<Long, Device> relationDeviceMap) {
+        Device gatewayDevice = relationDeviceMap.get(row.getGatewayId());
+        Device parentDevice = relationDeviceMap.get(row.getParentDeviceId());
+        row.setGatewayDeviceCode(gatewayDevice != null ? gatewayDevice.getDeviceCode() : null);
+        row.setGatewayDeviceName(gatewayDevice != null ? gatewayDevice.getDeviceName() : null);
+        row.setParentDeviceCode(parentDevice != null ? parentDevice.getDeviceCode() : null);
+        row.setParentDeviceName(parentDevice != null ? parentDevice.getDeviceName() : null);
+    }
+
+    private Device resolveParentDevice(DeviceAddDTO dto, Long currentDeviceId) {
+        String parentDeviceCode = normalizeOptionalText(dto.getParentDeviceCode());
+        if (dto.getParentDeviceId() != null && parentDeviceCode != null) {
+            throw new BizException("父设备主键和父设备编码不能同时填写");
+        }
+        if (dto.getParentDeviceId() == null && parentDeviceCode == null) {
+            return null;
+        }
+
+        Device parentDevice = dto.getParentDeviceId() != null
+                ? getRequiredById(dto.getParentDeviceId())
+                : getRequiredByCode(parentDeviceCode);
+
+        if (currentDeviceId != null && currentDeviceId.equals(parentDevice.getId())) {
+            throw new BizException("父设备不能选择当前设备");
+        }
+        ensureNoParentCycle(currentDeviceId, parentDevice);
+        return parentDevice;
+    }
+
+    private void ensureNoParentCycle(Long currentDeviceId, Device parentDevice) {
+        if (currentDeviceId == null || parentDevice == null) {
+            return;
+        }
+        Set<Long> visitedIds = new HashSet<>();
+        Device current = parentDevice;
+        while (current != null) {
+            Long currentId = current.getId();
+            if (currentId == null || !visitedIds.add(currentId)) {
+                return;
+            }
+            if (currentDeviceId.equals(currentId)) {
+                throw new BizException("父设备不能选择当前设备或其子设备");
+            }
+            if (current.getParentDeviceId() == null) {
+                return;
+            }
+            current = findDeviceOrNull(current.getParentDeviceId());
+        }
+    }
+
+    private Device findDeviceOrNull(Long id) {
+        if (id == null) {
+            return null;
+        }
+        return lambdaQuery()
+                .eq(Device::getId, id)
+                .eq(Device::getDeleted, 0)
+                .one();
+    }
+
+    private Long resolveGatewayId(Integer nodeType, Device parentDevice) {
+        if (!Integer.valueOf(SUB_DEVICE_NODE_TYPE).equals(nodeType) || parentDevice == null) {
+            return null;
+        }
+        if (Integer.valueOf(GATEWAY_NODE_TYPE).equals(parentDevice.getNodeType())) {
+            return parentDevice.getId();
+        }
+        return parentDevice.getGatewayId();
+    }
+
+    private String normalizeOptionalText(String value) {
+        if (!StringUtils.hasText(value)) {
+            return null;
+        }
+        return value.trim();
+    }
+
+    private String normalizeRequiredText(String value) {
+        String normalized = normalizeOptionalText(value);
+        if (normalized == null) {
+            throw new BizException("必填字段不能为空");
+        }
+        return normalized;
+    }
+
+    private DeviceOptionVO toDeviceOption(Device device, Product product) {
         DeviceOptionVO option = new DeviceOptionVO();
         option.setId(device.getId());
         option.setProductId(device.getProductId());
+        option.setGatewayId(device.getGatewayId());
+        option.setParentDeviceId(device.getParentDeviceId());
+        option.setProductKey(product != null ? product.getProductKey() : null);
+        option.setProductName(product != null ? product.getProductName() : null);
         option.setDeviceCode(device.getDeviceCode());
         option.setDeviceName(device.getDeviceName());
+        option.setNodeType(device.getNodeType());
         option.setOnlineStatus(device.getOnlineStatus());
+        option.setDeviceStatus(device.getDeviceStatus());
         return option;
     }
 }
